<resources>
    <string name="app_name">MAD Lab Exam 2</string>
    <string name="splash_screen">QUICKSEAT</string>
    <string name="onboard_screen_1_MT">Welcome to QUICKSEAT</string>
    <string name="onboard_screen_1_ST">Sri Lanka’s No. 1 expressway buses seat booking app</string>
    <string name="onboard_screen_2_MT">Never Miss Your Bus</string>
    <string name="onboard_screen_2_ST">Stay updated with real-time bus schedules using QUICKSEAT!</string>
    <string name="onboard_screen_3_MT">Easy Seat Booking</string>
    <string name="onboard_screen_3_ST">Choose your perfect seat with an interactive layout!</string>
    <string name="onboard_screen_4_MT">Cashless Payments for E-Tickets</string>
    <string name="onboard_screen_4_ST">Book securely and travel hassle-free with digital tickets!</string>
    <string name="getStarted_MT">Ready to travel? Sign up and start your journey now</string>
    <string name="otpScreen_ST">Enter the verification code sent to yasindukarawita@gmail.com</string>
    <string name="signUpScreen_MT">Sign Up to QUICKSEAT</string>
    <string name="otpConfirmText">Great! Your QUICKSEAT account verified successfully</string>
    <string name="personalInformationText">Enter your personal Information</string>
    <string name="welcomeText">Hello &amp; Welcome, Yasindu!</string>
    <string name="dateText">Mon, March 24</string>
    <string name="subText">Buses departing from your nearest bus station</string>
    <string name="searchText">Search</string>
    <string name="loc1Text">Starting Location</string>
    <string name="loc2Text">Ending Location</string>
    <string name="searchSubText">Search results</string>

    <string name="offerText">Offers</string>
    <string name="off1MT">Seasonal Offer</string>
    <string name="off1ST">25% off for one booking 5 tickets</string>

    <string name="off2MT">Special Offer</string>
    <string name="off2ST">2 free tickets for completed 1000Km distance</string>

    <string name="profileText">Profile</string>
    <string name="name">Yasindu Rasanga Karawita</string>
    <string name="number">79</string>
    <string name="text">Km</string>
    <string name="kmsubText">Distance Travelled</string>
    <string name="seats">2</string>
    <string name="subText2">Seats Booked</string>

    <string name="bookingaseatText">Book your seat</string>
    <string name="availableseatText">Available Seats 8</string>
    <string name="bookingsubText">Pick your seat</string>
    <string name="bookedText">Booked</string>
    <string name="availableText">Available</string>
    <string name="selectedText">Selected</string>

    <string name="remTimeText1">Departure 5 Minutes</string>
    <string name="remSeatText1">8</string>
    <string name="startLocText1">Mathugama</string>
    <string name="destLocText1">Kaduwela</string>
    <string name="leaveTimeText1">6:40AM</string>
    <string name="reachTimeText1">7:40AM</string>
    <string name="durationText1">1 Hour</string>

    <string name="remTimeText2">Departure 10 Minutes</string>
    <string name="remSeatText2">5</string>
    <string name="startLocText2">Mathugama</string>
    <string name="destLocText2">Colombo</string>
    <string name="leaveTimeText2">6:45AM</string>
    <string name="reachTimeText2">8:15AM</string>
    <string name="durationText2">1 Hour 30 Minutes</string>

    <string name="remTimeText3">Departure 25 Minutes</string>
    <string name="remSeatText3">10</string>
    <string name="startLocText3">Mathugama</string>
    <string name="destLocText3">Kadawatha</string>
    <string name="leaveTimeText3">7:00AM</string>
    <string name="reachTimeText3">8:20AM</string>
    <string name="durationText3">1 Hour 20 Minutes</string>

    <string name="remTimeText4">Departure 25 Minutes</string>
    <string name="remSeatText4">15</string>
    <string name="startLocText4">Mathugama</string>
    <string name="destLocText4">Maharagama</string>
    <string name="leaveTimeText4">7:00AM</string>
    <string name="reachTimeText4">7:40AM</string>
    <string name="durationText4">40 Minutes</string>

    <string name="remTimeText5">Departure 35 Minutes</string>
    <string name="remSeatText5">20</string>
    <string name="startLocText5">Mathugama</string>
    <string name="destLocText5">Matara</string>
    <string name="leaveTimeText5">7:10AM</string>
    <string name="reachTimeText5">10:10AM</string>
    <string name="durationText5">3 Hours</string>

    <string name="remTimeText6">Departure 35 Minutes</string>
    <string name="remSeatText6">15</string>
    <string name="startLocText6">Mathugama</string>
    <string name="destLocText6">Negombo</string>
    <string name="leaveTimeText6">7:10AM</string>
    <string name="reachTimeText6">8:55AM</string>
    <string name="durationText6">1 Hour 45 Minutes</string>

    <string name="remTimeTextb2">Departure 35 Minutes</string>
    <string name="remSeatTextb2">35</string>
    <string name="leaveTimeTextb2">7:10AM</string>
    <string name="reachTimeTextb2">8:10AM</string>

    <string name="remTimeTextb3">Departure 1 Hour 5 Minutes</string>
    <string name="remSeatTextb3">8</string>
    <string name="leaveTimeTextb3">7:40AM</string>
    <string name="reachTimeTextb3">8:40AM</string>

    <string name="remTimeTextb4">Departure 1 Hour 35 Minutes</string>
    <string name="remSeatTextb4">35</string>
    <string name="leaveTimeTextb4">8:10AM</string>
    <string name="reachTimeTextb4">9:10AM</string>

    <string name="remTimeTextb5">Departure 2 Hours 5 Minutes</string>
    <string name="remSeatTextb5">35</string>
    <string name="leaveTimeTextb5">8:40AM</string>
    <string name="reachTimeTextb5">9:40AM</string>

    <string name="Locations">Locations</string>
    <string name="onboarding">Onboarding</string>
    <string name="destination">Destination</string>
    <string name="radioButton1">Mathugama Main Bus Station</string>
    <string name="radioButton2">Panthiya Junction</string>
    <string name="radioButton3">Welimanana Junction</string>
    <string name="radioButton4">Kadawaka</string>
    <string name="radioButton5">Yatadolawatta Junction</string>
    <string name="radioButton6">Malabada Junction</string>
    <string name="radioButton7">Sapugahawatta Junction</string>
    <string name="radioButton8">Dodangoda Interchange</string>
    <string name="radioButton9">Kothalawala Interchange</string>
    <string name="radioButton10">Kaduwela Main Bus Station</string>

    <string name="paymentText">Payment</string>
    <string name="ticketdetailsText">Ticket Pricing Details</string>
    <string name="tickets">Tickets : 2</string>
    <string name="ticketsLocations">Yatadolawatta To Kothalawala</string>
    <string name="priceCalculation">Rs. 420.00 x 2</string>
    <string name="totalPrice">Rs. 840.00</string>
    <string name="creditCardText">Add Your Credit Card Details</string>
    <string name="CardNumbertext">Card Number</string>
    <string name="CardHoldertext">Card Holder</string>
    <string name="CardExptext">Exp. Date</string>
    <string name="CardCVVtext">CVV</string>

    <string name="paymentConfirmtext">Payment Done Successfully</string>
    <string name="paymentConfirmsubtext">Go to your bookings to view your booked E-Tickets</string>

    <string name="bookingstext">Bookings</string>

    <string name="ticketLocations1">Yatadolawatta To Kothalawala</string>
    <string name="ticketLocations2">Mathugama To Colombo</string>
    <string name="ticketLocations3">Yatadolawatta to Maharagama</string>
    <string name="ticketLocations4">Yatadolawatta to Colombo</string>
    <string name="ticketLocations5">Mathugama to Negombo</string>

    <string name="ticketToday">Today</string>
    <string name="ticketYesterday">Yesterday</string>
    <string name="ticketTomorrow">Tomorrow</string>
    <string name="ticketOther">March 20</string>

    <string name="personCount1">1 Person</string>
    <string name="personCount2">2 Person</string>

    <string name="price1">Rs. 840.00</string>
    <string name="price2">Rs. 480.00</string>
    <string name="price3">Rs. 400.00</string>
    <string name="price4">Rs. 480.00</string>
    <string name="price5">-Rs. 400.00</string>

    <string name="ticketStartLoc">Yatadolawatta</string>
    <string name="ticketDestinationLoc">Kothalawala</string>

    <string name="ticketText">Ticket Details</string>
    <string name="ticketNoText">Ticket No:</string>
    <string name="ticketNo">T12345</string>
    <string name="SeatNoText">Seat No:</string>
    <string name="SeatNo">S7,S8</string>
    <string name="persons">Persons:</string>
    <string name="personsNo">2</string>
    <string name="ticketsSubText">Let driver to scan this QR for verify your ticket</string>

    <string name="nameField">Name</string>
    <string name="emailField">Email</string>
    <string name="dobField">Date of Birth</string>
    <string name="genderField">Gender</string>
    <string name="maleButton">Male</string>
    <string name="femaleButton">Female</string>
    <string name="busStationField">Nearest Main Bus Station</string>
    <string name="nameHint">Name</string>
    <string name="emailHint">Email</string>
    <string name="busStationHint">Town</string>
    <string name="dobHint">YYYY/MM/DD</string>
    <string name="nextButton">Next</string>
    <string name="googleButton">Sign Up with Google</string>
    <string name="facebookButton">Sign Up with Facebook</string>
    <string name="appleButton">Sign Up with Apple</string>
    <string name="getStartedButton">Get Started</string>
    <string name="skipButton">Skip</string>
    <string name="claimButton">Claim</string>
    <string name="confirmOTPButton">Confirm OTP</string>
    <string name="bookingsButton">Bookings</string>
    <string name="faqButton">FAQ</string>
    <string name="aboutusButton">About Us</string>
    <string name="confirmSeatButton">Confirm 2 Seats</string>
    <string name="proceedButton">Proceed to Pay</string>
    <string name="payButton">Pay Rs. 840.00</string>
    <string name="gotobookingsButton">Go to bookings</string>
    <string name="activeBookingButton">Active</string>
    <string name="completedBookingButton">Completed</string>
    <string name="cancelledBookingButton">Cancelled</string>
    <string name="cancelledTicketButton">Cancel Ticket</string>
    <string name="hint1">1</string>
    <string name="hint2">2</string>
    <string name="hint3">3</string>
    <string name="hint4">4</string>
    <string name="hint5">5</string>
    <string name="hintLoc1">Mathugama</string>
    <string name="hintLoc2">Kaduwela</string>
</resources>